test/parser/should_fail/comments6.souc.bad
import commens

{;
{; comment {; nested {; comment ;} ;} ;} 
main() = do
	x <- 42 ; a comment
	print x
